--- a/reading.html
+++ b/reading.html
@@ -43,7 +43,7 @@
 
     <section id="about-info" class="bg-light py-3">
         <div class="container"></div>
-            <h1 class="l-heading">Recommended Reading</h1>
+            <h1 class="l-heading">Reading List</h1>
 
         </div>
         </section>
