--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     
     <div class="box_c box_i bg-light">
       <h3 class="ul">Employment Experience</h3>
-      <h4>Assocaite Solutions Analsyt (12-month Internship)</h4>
+      <h4>Associate Solutions Analyst (12-month Internship)</h4>
       <span><a class="black txt" target ="_blank" href="https://www.ezesoft.com/">Eze Software</a></span>
       <p style="font-size: smaller; padding: 0%; margin: 0%; border: 0%;">2020-2021</p>
   
