--- a/blogs.html
+++ b/blogs.html
@@ -269,7 +269,7 @@
         <h1 class="logo"><a href="index.html">Joshua Kenyon</a></h1>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a class="current" href="Blogs.html">Blogs</a></li>
+          <li><a class="current" href="blogs.html">Blogs</a></li>
           <li><a href="reading.html">Reading List</a></li>
           <li><a href="contact.html">Contact Me</a></li>
         </ul>
