--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <h1 class="logo"><a href="index.html">Joshua Kenyon</a></h1>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="Blogs.html">Blogs</a></li>
+          <li><a href="blogs.html">Blogs</a></li>
           <li><a href="reading.html">Reading List</a></li>
           <li><a class="current" href="contact.html">Contact Me</a></li>
         </ul>
