--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="showcase-content">
           <h1 style="color:black"></h1style>My Personal Portfolio</h1>
           <h4 class="lead">Hi, i'm Joshua. Welcome to my website! </h4>
-          <a class="btn" href="Blogs.html">My Blogs</a>
+          <a class="btn" href="blogs.html">My Blogs</a>
         </div>
       </div>
     </div>
