--- a/blogs.html
+++ b/blogs.html
@@ -289,12 +289,12 @@
 	<section id="testimonials" class="py-3">
 		<div class="container2">
       <ul class="grid">
-        <li class="grid_item span__1 f"><a target="_blank" href="https://www.developmentinaction.org/who-are-indias-fake-doctors/" class="grid_link"><div class="middle"><div class="tile" >Who are India’s fake doctors?</div></div></a></li>
-        <li class="grid_item span__1 a"><a target="_blank" href="https://www.developmentinaction.org/the-role-of-privatisation-in-developing-countries/" class="grid_link"><div class="middle"><div class="tile" >The role of privatisation in developing countries</div></div></a></li>
-        <li class="grid_item span__1 b"><a target="_blank" href="https://www.developmentinaction.org/how-the-international-monetary-funds-loan-conditionality-is-hurting-developing-countries/" class="grid_link"><div class="middle"><div class="tile">How the International Monetary Fund’s loan conditionality is hurting developing countries</div></div></a></li>
-        <li class="grid_item span__1 c"><a target="_blank" href="https://www.developmentinaction.org/the-perils-of-election-fraud-in-africa/" class="grid_link"><div class="middle"><div class="tile">The perils of election fraud in Africa</div></div></a></li>
-        <li class="grid_item span__1 d"><a target="_blank" href="https://www.developmentinaction.org/is-it-time-to-end-the-war-on-drugs/" class="grid_link"><div class="middle"><div class="tile">Is it time to end the war on drugs?</div></div></a></li>
-        <li class="grid_item span__1 e"><a target="_blank" href="https://www.developmentinaction.org/suffocating-from-the-global-gag-rule-americas-anti-abortion-aid-policy/" class="grid_link"><div class="middle"><div class="tile">Suffocating from the Global Gag Rule, America’s anti-abortion aid policy</div></div></a></li>
+        <li class="grid_item span__1 f"><a target="_blank" href="http://www.developmentinaction.org/who-are-indias-fake-doctors/" class="grid_link"><div class="middle"><div class="tile" >Who are India’s fake doctors?</div></div></a></li>
+        <li class="grid_item span__1 a"><a target="_blank" href="http://www.developmentinaction.org/the-role-of-privatisation-in-developing-countries/" class="grid_link"><div class="middle"><div class="tile" >The role of privatisation in developing countries</div></div></a></li>
+        <li class="grid_item span__1 b"><a target="_blank" href="http://www.developmentinaction.org/how-the-international-monetary-funds-loan-conditionality-is-hurting-developing-countries/" class="grid_link"><div class="middle"><div class="tile">How the International Monetary Fund’s loan conditionality is hurting developing countries</div></div></a></li>
+        <li class="grid_item span__1 c"><a target="_blank" href="http://www.developmentinaction.org/the-perils-of-election-fraud-in-africa/" class="grid_link"><div class="middle"><div class="tile">The perils of election fraud in Africa</div></div></a></li>
+        <li class="grid_item span__1 d"><a target="_blank" href="http://www.developmentinaction.org/is-it-time-to-end-the-war-on-drugs/" class="grid_link"><div class="middle"><div class="tile">Is it time to end the war on drugs?</div></div></a></li>
+        <li class="grid_item span__1 e"><a target="_blank" href="http://www.developmentinaction.org/suffocating-from-the-global-gag-rule-americas-anti-abortion-aid-policy/" class="grid_link"><div class="middle"><div class="tile">Suffocating from the Global Gag Rule, America’s anti-abortion aid policy</div></div></a></li>
       </ul>
 		</div>
 	</section>
