--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <section id="features">
     <div class="box_c box_i bg-light">
       <h3 class="ul">Education</h3>
-      <h4>BSc Economics, 1st class (expected)</h4>
+      <h4>BSc Economics, 1st class (predicted)</h4>
       <a href="https://www.sheffield.ac.uk/" target="_blank" class="black">The University of Sheffield</a>
       <p style="font-size: smaller; padding: 0%; margin: 0%; border: 0%;">2018-2022</p>
     </div>
