--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
   <meta name="keyword" content="CV, portfolio, computer science">
   <script src="https://kit.fontawesome.com/bf308472c3.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./style.css">
+  <link rel="shortcut icon" type="image/x-icon" href="JK.png" />
   <link rel="stylesheet" media="screen and (max-width: 768px)" href="./mobile.css">
   <title>Personal Portfolio | Contact Me</title>
 </head>
