--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="keyword" content="CV, portfolio, computer science">
   <script src="https://kit.fontawesome.com/bf308472c3.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./style.css">
+  <link rel="shortcut icon" type="image/x-icon" href="JK.png" />
   <link rel="stylesheet" media="screen and (max-width: 791px)" href="./mobile.css"> 
   <title>Personal Portfolio | Home</title>
   <style> 
