--- a/reading.html
+++ b/reading.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Welcome to my personal portfolio">
   <meta name="keyword" content="CV, portfolio, computer science">
   <link rel="stylesheet" href="./style.css">
+  <link rel="shortcut icon" type="image/x-icon" href="JK.png" />
   <link rel="stylesheet" media="screen and (max-width: 768px)" href="./mobile.css">
   <title>Personal Portfolio | Recommended Reading</title>
   <header>
