--- a/reading.html
+++ b/reading.html
@@ -49,6 +49,9 @@
         </div>
         </section>
     <div>
+       <span class = "box_r box_color">
+        <img src="poverty.jpg" alt="The End of Poverty"><h2><a class="txt black injected-text" href="https://www.amazon.co.uk/End-Poverty-Make-Happen-Lifetime/dp/0141018666" target="_blank">The End of Poverty<div><h6>Jeffrey Sachs</h6></div></a></h2></span>
+      
       <span class = "box_r box_color">
         <img src="growth.jpg" alt="The Elusive Quest for Growth"><h2><a class="txt black injected-text" href="https://www.amazon.co.uk/Elusive-Quest-Growth-Misadventures-Misadventure/dp/0262550423" target="_blank">The Elusive Quest for Growth<div><h6>William Easterly </h6></div></a></h2></span>      
         
