--- a/blogs.html
+++ b/blogs.html
@@ -142,6 +142,18 @@
     background: purple; 
   }
 
+  .i { 
+    background-image: url('finance.PNG'); 
+    background-size: 100% 100%;
+  }
+  .i:hover .middle {
+    opacity: 1;
+  }
+  .i:hover .grid_link {
+    background-image: url('finance.PNG'); 
+    background-size: 100% 100%;
+  }
+	  
   @media only all and (min-width: 570px)  and (max-width: 1149px) {
     .span__1,
     .span__2,
@@ -290,6 +302,7 @@
 	<section id="testimonials" class="py-3">
 		<div class="container2">
       <ul class="grid">
+	<li class="grid_item span__1 i"><a target="_blank" href="http://www.developmentinaction.org/is-microfinance-a-silver-bullet-for-development/" class="grid_link"><div class="middle"><div class="tile">Is microfinance a silver bullet for development?</div></div></a></li>
         <li class="grid_item span__1 f"><a target="_blank" href="http://www.developmentinaction.org/who-are-indias-fake-doctors/" class="grid_link"><div class="middle"><div class="tile" >Who are India’s fake doctors?</div></div></a></li>
         <li class="grid_item span__1 a"><a target="_blank" href="http://www.developmentinaction.org/the-role-of-privatisation-in-developing-countries/" class="grid_link"><div class="middle"><div class="tile" >The role of privatisation in developing countries</div></div></a></li>
         <li class="grid_item span__1 b"><a target="_blank" href="http://www.developmentinaction.org/how-the-international-monetary-funds-loan-conditionality-is-hurting-developing-countries/" class="grid_link"><div class="middle"><div class="tile">How the International Monetary Fund’s loan conditionality is hurting developing countries</div></div></a></li>
