--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="container">
         <h1 class="logo"><a href="index.html">Joshua Kenyon</a></h1>
         <ul>
-          <li><a class="current" href="index.html">Home</a></li>
+          <li><a class="current" href="index">Home</a></li>
           <li><a href="blogs.html">Blogs</a></li>
           <li><a href="reading.html">Reading List</a></li>
           <li><a href="contact.html">Contact Me</a></li>
