--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
   <header>
     <nav id="navbar">
       <div class="container">
-        <h1 class="logo"><a href="index.html">Joshua Kenyon</a></h1>
+        <h1 class="logo"><a href="index">Joshua Kenyon</a></h1>
         <ul>
           <li><a class="current" href="index">Home</a></li>
-          <li><a href="blogs.html">Blogs</a></li>
-          <li><a href="reading.html">Reading List</a></li>
-          <li><a href="contact.html">Contact Me</a></li>
+          <li><a href="blogs">Blogs</a></li>
+          <li><a href="reading">Reading List</a></li>
+          <li><a href="contact">Contact Me</a></li>
         </ul>
       </div>
     </nav>
@@ -67,7 +67,7 @@
         <div class="showcase-content">
           <h1 style="color:black"></h1style>My Personal Portfolio</h1>
           <h4 class="lead">Hi, i'm Joshua. Welcome to my website! </h4>
-          <a class="btn" href="blogs.html">My Blogs</a>
+          <a class="btn" href="blogs">My Blogs</a>
         </div>
       </div>
     </div>
