--- a/blogs.html
+++ b/blogs.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" type="image/x-icon" href="JK.png" />
   <link rel="stylesheet" media="screen and (max-width: 768px)" href="./mobile.css">
-  <title>Personal Portfolio | Blogs</title>
+  <title>Joshua Kenyon | Blogs</title>
   <style> 
     *, *:before, *:after {
     -moz-box-sizing: border-box;
