--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" type="image/x-icon" href="JK.png" />
   <link rel="stylesheet" media="screen and (max-width: 768px)" href="./mobile.css">
-  <title>Personal Portfolio | Contact Me</title>
+  <title>Joshua Kenyon | Contact Me</title>
 </head>
 <body>
   <header>
