--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" type="image/x-icon" href="JK.png" />
   <link rel="stylesheet" media="screen and (max-width: 791px)" href="./mobile.css"> 
-  <title>Personal Portfolio | Home</title>
+  <title>Joshua Kenyon | Home</title>
   <style> 
 
 
