--- a/reading.html
+++ b/reading.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" type="image/x-icon" href="JK.png" />
   <link rel="stylesheet" media="screen and (max-width: 768px)" href="./mobile.css">
-  <title>Joshua Kenyon | Recommended Reading</title>
+  <title>Joshua Kenyon | Reading List</title>
   <header>
     <style>
 
