--- a/blogs.html
+++ b/blogs.html
@@ -168,6 +168,19 @@
   background-size: 100% 100%;
 }
 	  
+	  
+.k { 
+  background-image: url('school_girls.jpg'); 
+  background-size: 100% 100%;
+}
+.k:hover .middle {
+  opacity: 1;
+}
+.k:hover .grid_link {
+  background-image: url('school_girls.jpg'); 
+  background-size: 100% 100%;
+}
+	  
   @media only all and (min-width: 570px)  and (max-width: 1149px) {
     .span__1,
     .span__2,
@@ -316,8 +329,9 @@
 	<section id="testimonials" class="py-3">
 		<div class="container2">
       <ul class="grid">
+	<li class="grid_item span__1 k"><a target="_blank" href="https://www.globaleconomist.co.uk/should-developing-countries-have-their-debts-cancelled" class="grid_link"><div class="middle"><div class="tile">Should developing countries have their debts cancelled?</div></div></a></li>
         <li class="grid_item span__1 j"><a target="_blank" href="https://www.globaleconomist.co.uk/the-accident-of-economic-growth/" class="grid_link"><div class="middle"><div class="tile">The accident of economic growth</div></div></a></li>
-	      <li class="grid_item span__1 i"><a target="_blank" href="http://www.developmentinaction.org/is-microfinance-a-silver-bullet-for-development/" class="grid_link"><div class="middle"><div class="tile">Is microfinance a silver bullet for development?</div></div></a></li>
+	<li class="grid_item span__1 i"><a target="_blank" href="http://www.developmentinaction.org/is-microfinance-a-silver-bullet-for-development/" class="grid_link"><div class="middle"><div class="tile">Is microfinance a silver bullet for development?</div></div></a></li>
         <li class="grid_item span__1 f"><a target="_blank" href="http://www.developmentinaction.org/who-are-indias-fake-doctors/" class="grid_link"><div class="middle"><div class="tile" >Who are India’s fake doctors?</div></div></a></li>
         <li class="grid_item span__1 a"><a target="_blank" href="http://www.developmentinaction.org/the-role-of-privatisation-in-developing-countries/" class="grid_link"><div class="middle"><div class="tile" >The role of privatisation in developing countries</div></div></a></li>
         <li class="grid_item span__1 b"><a target="_blank" href="http://www.developmentinaction.org/how-the-international-monetary-funds-loan-conditionality-is-hurting-developing-countries/" class="grid_link"><div class="middle"><div class="tile">How the International Monetary Fund’s loan conditionality is hurting developing countries</div></div></a></li>
