--- a/blogs.html
+++ b/blogs.html
@@ -181,6 +181,18 @@
   background-size: 100% 100%;
 }
 	  
+.l { 
+  background-image: url('meditate.jpg'); 
+  background-size: 100% 100%;
+}
+.l:hover .middle {
+  opacity: 1;
+}
+.l:hover .grid_link {
+  background-image: url('meditate.jpg'); 
+  background-size: 100% 100%;
+}
+	  
   @media only all and (min-width: 570px)  and (max-width: 1149px) {
     .span__1,
     .span__2,
@@ -329,6 +341,7 @@
 	<section id="testimonials" class="py-3">
 		<div class="container2">
       <ul class="grid">
+	<li class="grid_item span__1 l"><a  href="why-you-should-meditate" class="grid_link"><div class="middle"><div class="tile">Why you should meditate</div></div></a></li>
 	<li class="grid_item span__1 k"><a target="_blank" href="https://www.globaleconomist.co.uk/should-developing-countries-have-their-debts-cancelled" class="grid_link"><div class="middle"><div class="tile">Should developing countries have their debts cancelled?</div></div></a></li>
         <li class="grid_item span__1 j"><a target="_blank" href="https://www.globaleconomist.co.uk/the-accident-of-economic-growth/" class="grid_link"><div class="middle"><div class="tile">The accident of economic growth</div></div></a></li>
 	<li class="grid_item span__1 i"><a target="_blank" href="http://www.developmentinaction.org/is-microfinance-a-silver-bullet-for-development/" class="grid_link"><div class="middle"><div class="tile">Is microfinance a silver bullet for development?</div></div></a></li>
