--- a/reading.html
+++ b/reading.html
@@ -49,6 +49,11 @@
         </div>
         </section>
     <div>
+       <img src="goodeconomics.jpg" alt="Good Economics for Hard Times"><h2><a class="txt black injected-text" href="https://www.amazon.co.uk/dp/B07VBCB14N/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1" target="_blank">Good Economics for Hard Times<div><h6>Abhijit V. Banerjee and Esther Duflo</h6></div></a></h2></span>
+
+      <span class = "box_r box_color">
+        <img src="choose.jpg" alt="Free to Choose"><h2><a class="txt black injected-text" href="https://www.amazon.co.uk/dp/B004MYFLBS/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1" target="_blank">Free to Choose<div><h6>Milton Friedman</h6></div></a></h2></span>
+
         <span class = "box_r box_color">
         <img src="nudge.jpg" alt="Nudge"><h2><a class="txt black injected-text" href="https://www.amazon.co.uk/Nudge-Improving-Decisions-Health-Happiness/dp/0141040017/ref=asc_df_0141040017/?tag=googshopuk-21&linkCode=df0&hvadid=310856639426&hvpos=&hvnetw=g&hvrand=2555890326544024051&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1006998&hvtargid=pla-469690888011&psc=1&th=1&psc=1" target="_blank">Nudge<div><h6>Richard H. Thaler and Cass R. Sunstein</h6></div></a></h2></span>
       
