--- a/why-you-should-meditate.html
+++ b/why-you-should-meditate.html
@@ -11,8 +11,8 @@
         <meta property="og:url" content="https://www.joshuakenyon.co.uk/why-you-should-meditate"/>
         <meta name="keyword" content="meditate, blog, mindfulness">
         <meta property="og:title" content="Why you should meditate"/>
-        <meta property="og:image" content=""/>
-        <meta property="og:description" content=""/>
+        <meta property="og:image" content="meditate.jpg"/>
+        <meta property="og:description" content="Meditation is the practice of focusing your attention on an object, which is often your breath in mindful meditation practices. It is sometimes incorrectly believed to be the practice of completely clearing your mind of thoughts."/>
         <meta property="og:type" content="website"/>
         <title>Why you should meditate</title>
         <style>
