--- a/reading.html
+++ b/reading.html
@@ -49,6 +49,7 @@
         </div>
         </section>
     <div>
+      <span class = "box_r box_color">
        <img src="goodeconomics.jpg" alt="Good Economics for Hard Times"><h2><a class="txt black injected-text" href="https://www.amazon.co.uk/dp/B07VBCB14N/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1" target="_blank">Good Economics for Hard Times<div><h6>Abhijit V. Banerjee and Esther Duflo</h6></div></a></h2></span>
 
       <span class = "box_r box_color">
