--- a/the-dark-side-of-technology.html
+++ b/the-dark-side-of-technology.html
@@ -25,12 +25,12 @@
     <header>
         <nav id="navbar">
           <div class="container">
-            <h1 class="logo"><a href="index.html">Joshua Kenyon</a></h1>
+            <h1 class="logo"><a href="index">Joshua Kenyon</a></h1>
             <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a class="current" href="blogs.html">Blogs</a></li>
-              <li><a href="reading.html">Reading List</a></li>
-              <li><a href="contact.html">Contact Me</a></li>
+              <li><a href="index">Home</a></li>
+              <li><a class="current" href="blogs">Blogs</a></li>
+              <li><a href="reading">Reading List</a></li>
+              <li><a href="contact">Contact Me</a></li>
             </ul>
           </div>
         </nav>
