--- a/the-dark-side-of-technology.html
+++ b/the-dark-side-of-technology.html
@@ -12,7 +12,7 @@
         <meta name="keyword" content="social media, blog, technology, mental health">
         <meta property="og:title" content="The dark side of technology"/>
         <meta property="og:image" content="family.jpg"/>
-        <meta property="og:description" content="Meditation is the practice of focusing your attention on an object, which is often your breath in mindful meditation practices. It is sometimes incorrectly believed to be the practice of completely clearing your mind of thoughts."/>
+        <meta property="og:description" content="According to the 2019 world happiness report, negative emotions such as worry, sadness, and anger have been rising around the world. How is it possible that we are getting unhappier in the face of the rising living standards catalysed by improvements to technology? Though perhaps it is because of – rather than despite – better technology that we are feeling this way."/>
         <meta property="og:type" content="website"/>
         <title>The dark side of technology</title>
         <style>
