--- a/the-dark-side-of-technology.html
+++ b/the-dark-side-of-technology.html
@@ -64,7 +64,7 @@
             
             <p>Elon Musk, the CEO of Tesla, claims that humans are already <a href="https://www.theverge.com/2016/6/2/11837854/neural-lace-cyborgs-elon-musk" target="_blank"> cyborgs</a>. We can now answer any question immediately, send messages to millions of people, and video call anyone around the world. The downside of becoming so connected to our phone, however, is that having to go a couple of days without it makes people feel as though they have lost a part of themselves. Everyone reading this will know how it feels to have temporarily misplaced their phone. The fact we are so emotionally dependant on having this device in our pockets should be daunting and we should try to weaken, or even break, that dependency.</p>
 
-            <img id="l_photo" src="barista.jpg" alt="A family using their phones">
+            <img id="l-photo" src="barista.jpg" alt="A family using their phones">
 
             <p id="info_img">A cheerful barista talking to a customer. Photo by Tim Douglas from Pexels</p>
             
