--- a/index.html
+++ b/index.html
@@ -77,10 +77,7 @@
     <div class="info-content">
       <h2>About Me</h2>
       <p>
-        I am a BSc Economics student at the University of Sheffield who has an interest in international development. Currently, I am undertaking an industrial placement year at Eze Software as an Associate Solutions Analyst – a client-facing role in the FinTech industry. 
-      <br>
-      <br>
-      I also enjoy writing blogs and learning both languages and computer science.
+        I am a BSc Economics student at the University of Sheffield with professional experience in the financial services industry. In my free time, I write blogs about economic and societal issues as well as developing my language and programming language skills.
       </p>
     </div>
   </section>
