--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="info-content">
       <h2>About Me</h2>
       <p>
-        I am a BSc Economics student at the University of Sheffield with professional experience in the financial services industry. In my free time, I write blogs about economic and societal issues as well as developing my language and programming language skills.
+        I am a BSc Economics student at the University of Sheffield with professional experience in the financial services industry. In my free time, I write blogs about economic and societal issues as well as develop my language and programming language skills.
       </p>
     </div>
   </section>
