--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="container">
         <div class="showcase-content">
           <h1 style="color:black"></h1style>My Personal Portfolio</h1>
-          <h4 class="lead">Hi, i'm Joshua. Welcome to my website! </h4>
+          <h4 class="lead">Hi, I'm Joshua. Welcome to my website! </h4>
           <a class="btn" href="blogs">My Blogs</a>
         </div>
       </div>
