--- a/the-dark-side-of-technology.html
+++ b/the-dark-side-of-technology.html
@@ -20,66 +20,17 @@
                 color:black;
                 margin-bottom: 20px;
             }
-            
-              #l_photo {
-                width: 20%;
-                height: auto;
-                display: block;
-                margin: 40px auto 0 auto;
-              }
-
-              @media screen and (max-width: 1250px) {
-                #l_photo {
-                    width: 30%;
-                }
-                }
-
-
-                @media screen and (min-width: 791px) and (max-width: 1000px) {
-                  #l_photo {
-                    width: 35%;
-                    height: auto;
-                    display: block;
-                    margin: 35px auto 10px auto;
-                  }
-                }
-                @media screen and (max-width: 790px) {
-                  #l_photo {
-                    width: 40%;
-                    height: auto;
-                    display: block;
-                    margin: 35px auto 10px auto;
-                  }
-                }
-
-                @media screen and (max-width: 550px) {
-                  #l_photo {
-                    width: 55%;
-                    height: auto;
-                    display: block;
-                    margin: 35px auto 10px auto;
-                  }
-                }
-
-                @media screen and (max-width: 450px) {
-                  #l_photo {
-                    width: 60%;
-                    height: auto;
-                    display: block;
-                    margin: 35px auto 10px auto;
-                  }
-                }
         </style>
     </head>
     <header>
         <nav id="navbar">
           <div class="container">
-            <h1 class="logo"><a href="index">Joshua Kenyon</a></h1>
+            <h1 class="logo"><a href="index.html">Joshua Kenyon</a></h1>
             <ul>
-              <li><a href="index">Home</a></li>
-              <li><a class="current" href="blogs">Blogs</a></li>
-              <li><a href="reading">Reading List</a></li>
-              <li><a href="contact">Contact Me</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a class="current" href="blogs.html">Blogs</a></li>
+              <li><a href="reading.html">Reading List</a></li>
+              <li><a href="contact.html">Contact Me</a></li>
             </ul>
           </div>
         </nav>
